[BUG][REFACTOR] #22585 Sidebar Menu | Date Field alignment issue

--- a/gui/src/public/css/dashboardEditor.scss
+++ b/gui/src/public/css/dashboardEditor.scss
@@ -505,6 +505,7 @@ div#filter-form-container.show-filter-panel {
 
       .dashboard-filter-field {
         display: flex;
+        justify-content: center;
       }
 
       #value.dashboardTextField {
